# Lidar-Perception

./: .gitignore  README.md  requirements.txt
machine_learning_lidar_detection/src/: dataset.py  main.py  visualization.py
ros2_ws/src/lidar_perception/: package.xml  setup.py
ros2_ws/src/lidar_perception/launch/: lidar_perception_launch.py
ros2_ws/src/lidar_perception/lidar_perception/: lidar_perception.py
ros2_ws/src/lidar_perception_cpp/: CMakeLists.txt  package.xml
ros2_ws/src/lidar_perception_cpp/include/lidar_perception_cpp/: lidar_perception.hpp
ros2_ws/src/lidar_perception_cpp/src/: lidar_perception.cpp
